test-cases/negative/test_115_invalid_string_literal.lay
# negative test: invalid string literal (unclosed quote)
# expected: lexer should catch this

the variable x of type String is 'hello world


